# SpacePartitioning

./: README.md
cs350_nestor.uriarte_0/src/: camera.cpp  camera.hpp  debug.cpp  debug.hpp  demo_renderer.cpp  demo_renderer.hpp  file.cpp  file.hpp  geometry.cpp  geometry.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_data.cpp  pch.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
cs350_nestor.uriarte_1/: CMakeLists.txt
cs350_nestor.uriarte_1/src/: bvh.hpp  camera.cpp  camera.hpp  debug.cpp  demo_bvh.cpp  demo_bvh.hpp  fwd.hpp  gameobject.cpp  geometry.cpp  geometry.hpp  main.cpp  math.hpp  mesh.cpp  mesh.hpp  mesh_data.cpp  opengl.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
cs350_nestor.uriarte_2/: CMakeLists.txt
cs350_nestor.uriarte_2/src/: camera.cpp  camera.hpp  debug.cpp  demo_octree.cpp  demo_octree.hpp  gameobject.hpp  geometry.cpp  geometry.hpp  imgui.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_data.hpp  octree.cpp  octree.hpp  octree.inl  pch.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  window.cpp
cs350_nestor.uriarte_2/src/test/: test_common.hpp  test_octree.cpp
cs350_nestor.uriarte_3/: CMakeLists.txt  Readme.txt
cs350_nestor.uriarte_3/src/: camera.hpp  doxyFile.txt  doxyFunc.txt  fileHeader.txt  funcHeader.txt  geometry.cpp  geometry.hpp  kdtree.cpp  kdtree.hpp  material.hpp  math.hpp  mesh.hpp  raytracer.hpp  scene.cpp  scene.hpp  scene_data.hpp  texture.hpp
cs350_nestor.uriarte_3/src/test/: common.hpp  sutherland_tests.cpp  test_raytrace.cpp
